--- a/index.html
+++ b/index.html
@@ -4,28 +4,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home - My Personal Blog</title>
+  <title>Home - Our Personal Blog</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <nav class="navbar">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Me</a></li>
+      <li><a href="about.html">About Us</a></li>
       <li><a href="blog.html">Blog</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
   <header class="header">
     <div class="container">
-      <h1>Welcome to My Blog</h1>
+      <h1>Welcome to Our Blog</h1>
       <p>Sharing thoughts, ideas, and experiences</p>
     </div>
   </header>
   <main>
     <section id="home" class="section">
       <h2>Home</h2>
-      <p>Welcome to our personal blog! Here, we share my thoughts, ideas, and life experiences. Stay tuned!</p>
+      <p>Welcome to our personal blog! Here, we share our thoughts, ideas, and life experiences. Stay tuned!</p>
     </section>
   </main>
   <footer class="footer">
