--- a/blog.html
+++ b/blog.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog - My Personal Blog</title>
+  <title>Blog - Our Personal Blog</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Me</a></li>
+        <li><a href="about.html">About Us</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -25,11 +25,11 @@
             <h2>Blog Posts</h2>
             <article class="blog-post">
               <h3>First Blog Post</h3>
-              <p>This is my first blog post. I'm excited to start this journey of sharing my knowledge and experiences!</p>
+              <p>This is our first blog post. We are excited to start this journey of sharing my knowledge and experiences!</p>
             </article>
             <article class="blog-post">
-              <h3>Another Day in My Life</h3>
-              <p>Today, I learned something new about web development. I'm loving this creative process!</p>
+              <h3>Another Day in our Life</h3>
+              <p>Today, We learned something new about web development. </p>
             </article>
           </section>
     </main>
