--- a/about.html
+++ b/about.html
@@ -11,19 +11,19 @@
   <nav class="navbar">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Me</a></li>
+      <li><a href="about.html">About Us</a></li>
       <li><a href="blog.html">Blog</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
   <header class="header">
     <div class="container">
-      <h1>About Me</h1>
+      <h1>About Us</h1>
     </div>
   </header>
   <main>
     <section id="about" class="section">
-      <h2>About Me</h2>
+      <h2>About Us</h2>
       <p>Hi, We are Nirbhay Kakani and M Bhanu Sashank Varma. We are 3rd Year Computer Science student. We enjoy writing about our daily lives.</p>
     </section>
   </main>
