--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Me - My Personal Blog</title>
+  <title>About Us - Our Personal Blog</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
