--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         <p>Feel free to reach out via email: 
         </p>
         <br>
-        <a href="mailto:nirbhaykakani6@gmail.com">2205993@kiit.ac.in<a></a>
+        <a href="mailto:2205993@kiit.ac.in">2205993@kiit.ac.in<a></a>
         <a href="mailto:2205990@kiit.ac.in">2205990@kiit.ac.in<a></a>
       </section>
   </main>
