--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
       <li><a href="about.html">About Us</a></li>
       <li><a href="blog.html">Blog</a></li>
       <li><a href="contact.html">Contact</a></li>
+      <li><a href="login.html">Log Out</a></li>
     </ul>
   </nav>
   <header class="header">
