--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
       <li><a href="about.html">About Us</a></li>
       <li><a href="blog.html">Blog</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="login.html">Log Out</a></li>
+      <li><a href="#" onclick="logout()">Log Out</a></li>
     </ul>
   </nav>
   <header class="header">
@@ -24,17 +24,23 @@
   </header>
   <main>
     <section id="contact" class="section">
-        <h2>Contact Us</h2>
-        <p>Feel free to reach out via email: 
-        </p>
-        <br>
-        <a href="mailto:2205993@kiit.ac.in">2205993@kiit.ac.in<a></a>
-          <hr>
-        <a href="mailto:2205990@kiit.ac.in">2205990@kiit.ac.in<a></a>
-      </section>
+      <h2>Contact Us</h2>
+      <p>Feel free to reach out via email:</p>
+      <div class="email-container">
+        <a href="mailto:22205993@kiit.ac.in">2205993@kiit.ac.in</a>
+        <hr>
+        <a href="mailto:2205990@kiit.ac.in">2205990@kiit.ac.in</a>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <p>© 2025 Nirbhay Kakani and M Bhanu Sashank Varma. All Rights Reserved.</p>
   </footer>
+  <script>
+    function logout() {
+      alert("You have been logged out!");
+      window.location.href = "login.html"; 
+    }
+  </script>
   </body>
   </html>
