--- a/index.html
+++ b/index.html
@@ -14,23 +14,29 @@
       <li><a href="about.html">About Us</a></li>
       <li><a href="blog.html">Blog</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="login.html">Log Out</a></li>
+      <li><a href="#" onclick="logout()">Log Out</a></li>
     </ul>
   </nav>
   <header class="header">
     <div class="container">
-      <h1>Welcome to Our Blog</h1>
+      <h1>Welcome to our Blog</h1>
       <p>Sharing thoughts, ideas, and experiences</p>
     </div>
   </header>
   <main>
     <section id="home" class="section">
       <h2>Home</h2>
-      <p>Welcome to our personal blog! Here, we share our thoughts, ideas, and life experiences. Stay tuned!</p>
+      <p>Welcome to our personal blog! Here, we share thoughts, ideas, and life experiences. Stay tuned!</p>
     </section>
   </main>
   <footer class="footer">
     <p>© 2025 Nirbhay Kakani and M Bhanu Sashank Varma. All Rights Reserved.</p>
   </footer>
+  <script>
+    function logout() {
+      alert("You have been logged out!");
+      window.location.href = "login.html"; 
+    }
+  </script>
 </body>
 </html>
