--- a/blog.html
+++ b/blog.html
@@ -7,42 +7,104 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav class="navbar">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="#" onclick="logout()">Log Out</a></li>
-      </ul>
-    </nav>
-    <header class="header">
-        <div class="container">
-          <h1>Blog</h1>
-        </div>
-    </header>
-    <main>
-        <section id="blog" class="section">
-            <h2>Blog Posts</h2>
-            <article class="blog-post">
-              <h3>First Blog Post</h3>
-              <p>This is our first blog post. We are excited to start this journey of sharing my knowledge and experiences!</p>
-            </article>
-            <article class="blog-post">
-              <h3>Another Day in our Life</h3>
-              <p>Today, We learned something new about web development. </p>
-            </article>
-          </section>
-    </main>
-<footer class="footer">
-  <p>© 2025 Nirbhay Kakani and M Bhanu Sashank Varma. All Rights Reserved.</p>
-</footer>
-<script>
-  function logout() {
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="#" onclick="logout()">Log Out</a></li>
+    </ul>
+  </nav>
+
+  <header class="header">
+    <div class="container">
+      <h1>Blog</h1>
+    </div>
+  </header>
+
+  <main>
+    <input type="text" id="searchBar" placeholder="Search blogs..." onkeyup="searchBlogs()">
     
-    alert("You have been logged out!");
-    window.location.href = "login.html"; 
-  }
-</script>
+    <section id="blog" class="section">
+      <h2>Blog Posts</h2>
+    </section>
+
+    <button id="createBlogButton" onclick="addBlogPost()">Create New Blog</button>
+  </main>
+
+  <footer class="footer">
+    <p>© 2025 Nirbhay Kakani and M Bhanu Sashank Varma. All Rights Reserved.</p>
+  </footer>
+
+  <script>
+    function logout() {
+      localStorage.removeItem("isLoggedIn");
+      localStorage.removeItem("userRole");
+      window.location.href = "login.html";
+    }
+
+    function searchBlogs() {
+      let query = document.getElementById("searchBar").value.toLowerCase();
+      let blogs = document.querySelectorAll(".blog-post");
+
+      blogs.forEach(blog => {
+        let title = blog.querySelector("h3").innerText.toLowerCase();
+        blog.style.display = title.includes(query) ? "block" : "none";
+      });
+    }
+
+    async function loadBlogs() {
+      const response = await fetch("http://localhost:3000/getBlogs");
+      const blogs = await response.json();
+      let blogSection = document.getElementById("blog");
+      blogSection.innerHTML = "<h2>Blog Posts</h2>";
+
+      blogs.forEach(blog => {
+        let newPost = document.createElement("article");
+        newPost.classList.add("blog-post");
+        newPost.innerHTML = `
+          <h3>${blog.title}</h3>
+          <p>${blog.content}</p>
+        `;
+        blogSection.appendChild(newPost);
+      });
+    }
+
+    async function addBlogPost() {
+      let userRole = localStorage.getItem("userRole");
+
+      if (userRole !== "admin") {
+        alert("Only admins can create blog posts!");
+        return;
+      }
+
+      let title = prompt("Enter Blog Title:");
+      let content = prompt("Enter Blog Content:");
+
+      if (title && content) {
+        const response = await fetch("http://localhost:3000/addBlog", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ title, content })
+        });
+
+        const result = await response.json();
+        if (result.success) {
+          loadBlogs();
+        }
+      }
+    }
+
+    document.addEventListener("DOMContentLoaded", () => {
+      let userRole = localStorage.getItem("userRole");
+
+      if (userRole !== "admin") {
+        document.getElementById("createBlogButton").style.display = "none";
+      }
+
+      loadBlogs();
+    });
+  </script>
 </body>
 </html>
