--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,14 @@
   <script>
     function logout() {
       alert("You have been logged out!");
+      localStorage.removeItem("isLoggedIn"); 
       window.location.href = "login.html"; 
     }
+    document.addEventListener("DOMContentLoaded", () => {
+    if (!localStorage.getItem("isLoggedIn")) {
+      window.location.href = "login.html"; 
+    }
+  });
   </script>
   </body>
   </html>
