--- a/login.html
+++ b/login.html
@@ -4,28 +4,87 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Blog Page</title>
+  <title>Login - Our Blog</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="header">
     <div class="container">
-      <h1>Welcome to Blog</h1>
+      <h1>Welcome to Our Blog</h1>
       <p>Sharing thoughts, ideas, and experiences</p>
     </div>
   </header>
 
-  <!-- Login Form -->
-  <form action="index.html" method="GET"> <!-- Redirects to index.html -->
-    <input type="text" name="username" placeholder="Username" required>
-    <hr>
-    <input type="password" name="password" placeholder="Password" required>
-    <hr>
-    <button type="submit">Login</button> <!-- Submits the form -->
-  </form>
+  <main>
+    <section id="register" class="section">
+      <h2>Register</h2>
+      <form onsubmit="return registerUser()">
+        <input type="text" id="regUsername" placeholder="Enter Username" required>
+        <input type="password" id="regPassword" placeholder="Enter Password" required>
+        <input type="text" id="adminCode" placeholder="Enter Admin Code (Optional)">
+        <button type="submit">Register</button>
+      </form>
+    </section>
+
+    <section id="login" class="section">
+      <h2>Login</h2>
+      <form onsubmit="return validateLogin()">
+        <input type="text" id="username" placeholder="Enter Username" required>
+        <input type="password" id="password" placeholder="Enter Password" required>
+        <button type="submit">Login</button>
+      </form>
+    </section>
+  </main>
 
   <footer class="footer">
     <p>© 2025 Nirbhay Kakani and M Bhanu Sashank Varma. All Rights Reserved.</p>
   </footer>
+
+  <script>
+    function registerUser() {
+      let username = document.getElementById("regUsername").value;
+      let password = document.getElementById("regPassword").value;
+      let adminCode = document.getElementById("adminCode").value;
+
+      if (username.trim() === "" || password.trim() === "") {
+        alert("Please fill in all fields.");
+        return false;
+      }
+
+      let userRole = (adminCode === "SECRET123") ? "admin" : "user";
+
+      localStorage.setItem("username", username);
+      localStorage.setItem("password", password);
+      localStorage.setItem("userRole", userRole);
+
+      alert(`Registration successful! You are now registered as a ${userRole}.`);
+      return false;
+    }
+
+    function validateLogin() {
+      let enteredUsername = document.getElementById("username").value;
+      let enteredPassword = document.getElementById("password").value;
+
+      let storedUsername = localStorage.getItem("username");
+      let storedPassword = localStorage.getItem("password");
+      let storedRole = localStorage.getItem("userRole");
+
+      if (enteredUsername === storedUsername && enteredPassword === storedPassword) {
+        localStorage.setItem("isLoggedIn", "true");
+        alert(`Login successful! You are logged in as ${storedRole}.`);
+        window.location.href = "index.html";
+        return false;
+      } else {
+        alert("Invalid username or password.");
+        return false;
+      }
+    }
+
+    document.addEventListener("DOMContentLoaded", () => {
+      if (localStorage.getItem("isLoggedIn") === "true") {
+        window.location.href = "index.html";
+      }
+    });
+  </script>
 </body>
 </html>
